--- a/tokyo_air_quality.ipynb
+++ b/tokyo_air_quality.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Tokyo Air Quality: Is it Improving?\n",
     "\n",
-    "Breathing clean air should be a concern for everybody, irrespective of where you live in the world. But what is happening in Tokyo? Has air quality improved in recent years? Or are things getting worse?\n",
+    "The cleanliness of the air should be a concern for everyone, irrespective of where you live in the world. But what is happening in Tokyo? Has air quality improved in recent years? Or are things getting worse?\n",
     "\n",
     "Let's look at some data. Tokyo Metropolitan Government operate a number of air monitoring stations across the metropolis. They publish the data for everyone to see here: https://www.kankyo.metro.tokyo.lg.jp/air/air_pollution/torikumi/result_measurement.html\n",
     "\n",
@@ -16,7 +16,9 @@
     "- nitrogen dioxide (NO<sub>2</sub>)\n",
     "- sulphur dioxide (SO<sub>2</sub>)\n",
     "- photochemical oxidants\n",
-    "- carbon monoxide (CO)"
+    "- carbon monoxide (CO)\n",
+    "\n",
+    "Load some modules and import the data:"
    ]
   },
   {
@@ -107,11 +109,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, levels are trending downwards for the following pollutants: PM2.5, SPM, NO<sub>2</sub> & CO. SO<sub>2</sub> is flat, while photochemical oxidants had a slight upwards trend. Generally speaking the results are good news: air quality in Tokyo is improving.\n",
+    "As we can see, levels are trending downwards for the following four pollutants: PM2.5, SPM, NO<sub>2</sub> & CO. For the other two pollutants, SO<sub>2</sub> levels were flat, while photochemical oxidants trended slightly upwards between 2009 and 2019. Generally speaking the results are good news: air quality in Tokyo improved over the last decade.\n",
     "\n",
-    "Here are some other useful resources I found on the subject:\n",
-    "- Paper on the long term air pollution trends in Japan between 1970 and 2021: https://www.researchgate.net/publication/264171197\n",
-    "- Interesting presentation on the main causes of the air pollution and what the government (both national and the prefecture) are doing to tackle it: http://www.econ.ryukoku.ac.jp/~tlee/seminar-8.files/G4-%E6%9D%B1%E4%BA%AC%E9%83%BD%E3%81%AE%E5%A4%A7%E6%B0%97%E6%B1%9A%E6%9F%93-V4.pdf"
+    "Here are some useful resources I found on the subject:\n",
+    "- Paper on the long term air pollution trends in Japan between 1970 and 2012: https://www.researchgate.net/publication/264171197\n",
+    "- Interesting presentation on the main causes of the air pollution and what the government (both National and the Prefecture) are doing to tackle it: http://www.econ.ryukoku.ac.jp/~tlee/seminar-8.files/G4-%E6%9D%B1%E4%BA%AC%E9%83%BD%E3%81%AE%E5%A4%A7%E6%B0%97%E6%B1%9A%E6%9F%93-V4.pdf\n",
+    "\n",
+    "It will be interesting to follow what happens in coming years. Will air quality in Tokyo, continue to improve? Or will it flatline at some point?"
    ]
   }
  ],
