--- a/tokyo_air_quality.ipynb
+++ b/tokyo_air_quality.ipynb
@@ -115,7 +115,7 @@
     "- Paper on the long term air pollution trends in Japan between 1970 and 2012: https://www.researchgate.net/publication/264171197\n",
     "- Interesting presentation on the main causes of the air pollution and what the government (both National and the Prefecture) are doing to tackle it: http://www.econ.ryukoku.ac.jp/~tlee/seminar-8.files/G4-%E6%9D%B1%E4%BA%AC%E9%83%BD%E3%81%AE%E5%A4%A7%E6%B0%97%E6%B1%9A%E6%9F%93-V4.pdf\n",
     "\n",
-    "It will be interesting to follow what happens in coming years. Will air quality in Tokyo, continue to improve? Or will it flatline at some point?"
+    "It will be interesting to follow what happens in coming years. Will air quality in Tokyo continue to improve? Or will it flatline at some point?"
    ]
   }
  ],
